--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@flamework/components": "^1.2.2",
     "@flamework/core": "^1.2.2",
     "@flamework/networking": "^1.2.2",
-    "@rbxts/services": "^1.5.4"
+    "@rbxts/services": "^1.5.4",
+    "@rbxts/spr": "^2.1.1"
   }
 }
